// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SPagePostGlossaryCollection Snapshot > renders with posts (with auth) correctly 1`] = `
"<div>
  <div data-orientation="vertical" class="relative isolate">
    <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex flex-col lg:grid py-24 sm:py-32 lg:py-40 gap-16 sm:gap-y-24">
      <div class="text-center">
        <!--v-if-->
        <h1 class="text-5xl sm:text-7xl text-pretty tracking-tight font-bold text-highlighted">Glossary</h1>
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  <nav class="flex w-full flex-wrap gap-1 md:justify-between sticky top-8 z-20 rounded-md border border-(--ui-border) bg-white p-2"><a href="#A" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">A</span>
      <!--v-if-->
    </a><a href="#B" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">B</span>
      <!--v-if-->
    </a><a href="#C" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">C</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">D</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">E</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">F</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">G</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">H</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">I</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">J</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">K</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">L</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">M</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">N</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">O</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">P</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">Q</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">R</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">S</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">T</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">U</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">V</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">W</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">X</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">Y</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">Z</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">&amp;</span>
      <!--v-if-->
    </a></nav>
  <main>
    <section data-orientation="vertical" class="relative isolate" id="A">
      <div class="w-full max-w-(--ui-container) mx-auto sm:px-6 flex flex-col lg:grid py-16 sm:py-24 lg:py-32 gap-8 sm:gap-16 px-0 lg:px-0">
        <div class="">
          <!--v-if-->
          <!--v-if-->
          <h2 class="text-3xl sm:text-4xl lg:text-5xl text-pretty tracking-tight font-bold text-highlighted text-left">A</h2>
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
        </div>
        <div class="grid grid-cols-1 gap-6 sm:grid-cols-2 sm:gap-x-12 sm:gap-y-8 lg:grid-cols-3"><a href="/posts/arc/" class="focus-visible:outline-primary text-muted hover:text-default transition-colors group flex items-center gap-3"><span class="iconify i-lucide:arrow-right text-dimmed size-4 transition-transform group-hover:translate-x-1" aria-hidden="true"></span><span class="truncate text-base font-medium">Arc</span>
            <hr class="min-w-0 flex-1 border-(--ui-border)">
          </a></div>
      </div>
    </section>
    <section data-orientation="vertical" class="relative isolate" id="B">
      <div class="w-full max-w-(--ui-container) mx-auto sm:px-6 flex flex-col lg:grid py-16 sm:py-24 lg:py-32 gap-8 sm:gap-16 px-0 lg:px-0">
        <div class="">
          <!--v-if-->
          <!--v-if-->
          <h2 class="text-3xl sm:text-4xl lg:text-5xl text-pretty tracking-tight font-bold text-highlighted text-left">B</h2>
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
        </div>
        <div class="grid grid-cols-1 gap-6 sm:grid-cols-2 sm:gap-x-12 sm:gap-y-8 lg:grid-cols-3"><a href="/posts/barc/" class="focus-visible:outline-primary text-muted hover:text-default transition-colors group flex items-center gap-3"><span class="iconify i-lucide:arrow-right text-dimmed size-4 transition-transform group-hover:translate-x-1" aria-hidden="true"></span><span class="truncate text-base font-medium">Barc</span>
            <hr class="min-w-0 flex-1 border-(--ui-border)">
          </a></div>
      </div>
    </section>
    <section data-orientation="vertical" class="relative isolate" id="C">
      <div class="w-full max-w-(--ui-container) mx-auto sm:px-6 flex flex-col lg:grid py-16 sm:py-24 lg:py-32 gap-8 sm:gap-16 px-0 lg:px-0">
        <div class="">
          <!--v-if-->
          <!--v-if-->
          <h2 class="text-3xl sm:text-4xl lg:text-5xl text-pretty tracking-tight font-bold text-highlighted text-left">C</h2>
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
        </div>
        <div class="grid grid-cols-1 gap-6 sm:grid-cols-2 sm:gap-x-12 sm:gap-y-8 lg:grid-cols-3"><a href="/posts/carc/" class="focus-visible:outline-primary text-muted hover:text-default transition-colors group flex items-center gap-3"><span class="iconify i-lucide:arrow-right text-dimmed size-4 transition-transform group-hover:translate-x-1" aria-hidden="true"></span><span class="truncate text-base font-medium">Carc</span>
            <hr class="min-w-0 flex-1 border-(--ui-border)">
          </a></div>
      </div>
    </section>
  </main>
  <section data-orientation="vertical" class="relative isolate text-center">
    <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex flex-col lg:grid py-16 sm:py-24 lg:py-32 gap-8 sm:gap-16">
      <div class="">
        <!--v-if-->
        <!--v-if-->
        <h2 class="text-3xl sm:text-4xl lg:text-5xl text-pretty tracking-tight font-bold text-highlighted text-center">Subscribe to the newsletter</h2>
        <div class="text-base sm:text-lg text-muted text-center text-balance mt-6">Join a trillion other readers getting the best info on AI &amp; technology and stay ahead of the curve.</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div class="flex justify-center">
        <!-- For white background --><button type="button" class="disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary my-4 inline-flex items-center gap-2 rounded-md border border-neutral-800 bg-(--ui-background) px-8 py-3 text-lg font-semibold transition-colors hover:bg-neutral-100 focus:outline-hidden focus-visible:ring-2 focus-visible:ring-(--ui-primary) disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 dark:bg-(--ui-background) dark:text-white dark:border-white dark:hover:bg-neutral-700 text-neutral-800">
          <!--v-if--><span class="truncate">Subscribe</span>
          <!--v-if-->
        </button>
        <!--v-if-->
        <!--teleport start-->
        <!--teleport end-->
      </div>
    </div>
  </section>
</div>"
`;

exports[`SPagePostGlossaryCollection Snapshot > renders with posts (without auth) correctly 1`] = `
"<div>
  <div data-orientation="vertical" class="relative isolate">
    <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex flex-col lg:grid py-24 sm:py-32 lg:py-40 gap-16 sm:gap-y-24">
      <div class="text-center">
        <!--v-if-->
        <h1 class="text-5xl sm:text-7xl text-pretty tracking-tight font-bold text-highlighted">Glossary</h1>
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  <nav class="flex w-full flex-wrap gap-1 md:justify-between sticky top-8 z-20 rounded-md border border-(--ui-border) bg-white p-2"><a href="#A" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">A</span>
      <!--v-if-->
    </a><a href="#B" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">B</span>
      <!--v-if-->
    </a><a href="#C" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">C</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">D</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">E</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">F</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">G</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">H</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">I</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">J</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">K</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">L</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">M</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">N</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">O</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">P</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">Q</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">R</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">S</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">T</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">U</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">V</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">W</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">X</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">Y</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">Z</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">&amp;</span>
      <!--v-if-->
    </a></nav>
  <main>
    <section data-orientation="vertical" class="relative isolate" id="A">
      <div class="w-full max-w-(--ui-container) mx-auto sm:px-6 flex flex-col lg:grid py-16 sm:py-24 lg:py-32 gap-8 sm:gap-16 px-0 lg:px-0">
        <div class="">
          <!--v-if-->
          <!--v-if-->
          <h2 class="text-3xl sm:text-4xl lg:text-5xl text-pretty tracking-tight font-bold text-highlighted text-left">A</h2>
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
        </div>
        <div class="grid grid-cols-1 gap-6 sm:grid-cols-2 sm:gap-x-12 sm:gap-y-8 lg:grid-cols-3"><a href="/posts/arc/" class="focus-visible:outline-primary text-muted hover:text-default transition-colors group flex items-center gap-3"><span class="iconify i-lucide:arrow-right text-dimmed size-4 transition-transform group-hover:translate-x-1" aria-hidden="true"></span><span class="truncate text-base font-medium">Arc</span>
            <hr class="min-w-0 flex-1 border-(--ui-border)">
          </a></div>
      </div>
    </section>
    <section data-orientation="vertical" class="relative isolate" id="B">
      <div class="w-full max-w-(--ui-container) mx-auto sm:px-6 flex flex-col lg:grid py-16 sm:py-24 lg:py-32 gap-8 sm:gap-16 px-0 lg:px-0">
        <div class="">
          <!--v-if-->
          <!--v-if-->
          <h2 class="text-3xl sm:text-4xl lg:text-5xl text-pretty tracking-tight font-bold text-highlighted text-left">B</h2>
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
        </div>
        <div class="grid grid-cols-1 gap-6 sm:grid-cols-2 sm:gap-x-12 sm:gap-y-8 lg:grid-cols-3"><a href="/posts/barc/" class="focus-visible:outline-primary text-muted hover:text-default transition-colors group flex items-center gap-3"><span class="iconify i-lucide:arrow-right text-dimmed size-4 transition-transform group-hover:translate-x-1" aria-hidden="true"></span><span class="truncate text-base font-medium">Barc</span>
            <hr class="min-w-0 flex-1 border-(--ui-border)">
          </a></div>
      </div>
    </section>
    <section data-orientation="vertical" class="relative isolate" id="C">
      <div class="w-full max-w-(--ui-container) mx-auto sm:px-6 flex flex-col lg:grid py-16 sm:py-24 lg:py-32 gap-8 sm:gap-16 px-0 lg:px-0">
        <div class="">
          <!--v-if-->
          <!--v-if-->
          <h2 class="text-3xl sm:text-4xl lg:text-5xl text-pretty tracking-tight font-bold text-highlighted text-left">C</h2>
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
        </div>
        <div class="grid grid-cols-1 gap-6 sm:grid-cols-2 sm:gap-x-12 sm:gap-y-8 lg:grid-cols-3"><a href="/posts/carc/" class="focus-visible:outline-primary text-muted hover:text-default transition-colors group flex items-center gap-3"><span class="iconify i-lucide:arrow-right text-dimmed size-4 transition-transform group-hover:translate-x-1" aria-hidden="true"></span><span class="truncate text-base font-medium">Carc</span>
            <hr class="min-w-0 flex-1 border-(--ui-border)">
          </a></div>
      </div>
    </section>
  </main>
  <section data-orientation="vertical" class="relative isolate text-center">
    <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex flex-col lg:grid py-16 sm:py-24 lg:py-32 gap-8 sm:gap-16">
      <div class="">
        <!--v-if-->
        <!--v-if-->
        <h2 class="text-3xl sm:text-4xl lg:text-5xl text-pretty tracking-tight font-bold text-highlighted text-center">Subscribe to the newsletter</h2>
        <div class="text-base sm:text-lg text-muted text-center text-balance mt-6">Join a trillion other readers getting the best info on AI &amp; technology and stay ahead of the curve.</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div class="flex justify-center">
        <!-- For white background --><button type="button" class="disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary my-4 inline-flex items-center gap-2 rounded-md border border-neutral-800 bg-(--ui-background) px-8 py-3 text-lg font-semibold transition-colors hover:bg-neutral-100 focus:outline-hidden focus-visible:ring-2 focus-visible:ring-(--ui-primary) disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 dark:bg-(--ui-background) dark:text-white dark:border-white dark:hover:bg-neutral-700 text-neutral-800">
          <!--v-if--><span class="truncate">Subscribe</span>
          <!--v-if-->
        </button>
        <!--v-if-->
        <!--teleport start-->
        <!--teleport end-->
      </div>
    </div>
  </section>
</div>"
`;

exports[`SPagePostGlossaryCollection Snapshot > renders without posts (with auth) correctly 1`] = `
"<div>
  <div data-orientation="vertical" class="relative isolate">
    <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex flex-col lg:grid py-24 sm:py-32 lg:py-40 gap-16 sm:gap-y-24">
      <div class="text-center">
        <!--v-if-->
        <h1 class="text-5xl sm:text-7xl text-pretty tracking-tight font-bold text-highlighted">Glossary</h1>
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  <nav class="flex w-full flex-wrap gap-1 md:justify-between sticky top-8 z-20 rounded-md border border-(--ui-border) bg-white p-2"><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">A</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">B</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">C</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">D</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">E</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">F</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">G</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">H</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">I</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">J</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">K</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">L</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">M</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">N</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">O</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">P</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">Q</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">R</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">S</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">T</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">U</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">V</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">W</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">X</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">Y</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">Z</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">&amp;</span>
      <!--v-if-->
    </a></nav>
  <main></main>
  <section data-orientation="vertical" class="relative isolate text-center">
    <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex flex-col lg:grid py-16 sm:py-24 lg:py-32 gap-8 sm:gap-16">
      <div class="">
        <!--v-if-->
        <!--v-if-->
        <h2 class="text-3xl sm:text-4xl lg:text-5xl text-pretty tracking-tight font-bold text-highlighted text-center">Subscribe to the newsletter</h2>
        <div class="text-base sm:text-lg text-muted text-center text-balance mt-6">Join a trillion other readers getting the best info on AI &amp; technology and stay ahead of the curve.</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div class="flex justify-center">
        <!-- For white background --><button type="button" class="disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary my-4 inline-flex items-center gap-2 rounded-md border border-neutral-800 bg-(--ui-background) px-8 py-3 text-lg font-semibold transition-colors hover:bg-neutral-100 focus:outline-hidden focus-visible:ring-2 focus-visible:ring-(--ui-primary) disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 dark:bg-(--ui-background) dark:text-white dark:border-white dark:hover:bg-neutral-700 text-neutral-800">
          <!--v-if--><span class="truncate">Subscribe</span>
          <!--v-if-->
        </button>
        <!--v-if-->
        <!--teleport start-->
        <!--teleport end-->
      </div>
    </div>
  </section>
</div>"
`;

exports[`SPagePostGlossaryCollection Snapshot > renders without posts (without auth) correctly 1`] = `
"<div>
  <div data-orientation="vertical" class="relative isolate">
    <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex flex-col lg:grid py-24 sm:py-32 lg:py-40 gap-16 sm:gap-y-24">
      <div class="text-center">
        <!--v-if-->
        <h1 class="text-5xl sm:text-7xl text-pretty tracking-tight font-bold text-highlighted">Glossary</h1>
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  <nav class="flex w-full flex-wrap gap-1 md:justify-between sticky top-8 z-20 rounded-md border border-(--ui-border) bg-white p-2"><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">A</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">B</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">C</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">D</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">E</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">F</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">G</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">H</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">I</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">J</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">K</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">L</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">M</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">N</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">O</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">P</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">Q</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">R</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">S</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">T</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">U</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">V</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">W</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">X</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">Y</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">Z</span>
      <!--v-if-->
    </a><a aria-disabled="true" role="link" tabindex="-1" class="rounded-md font-medium inline-flex disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted size-8 items-center justify-center aria-disabled:opacity-50">
      <!--v-if--><span class="truncate">&amp;</span>
      <!--v-if-->
    </a></nav>
  <main></main>
  <section data-orientation="vertical" class="relative isolate text-center">
    <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex flex-col lg:grid py-16 sm:py-24 lg:py-32 gap-8 sm:gap-16">
      <div class="">
        <!--v-if-->
        <!--v-if-->
        <h2 class="text-3xl sm:text-4xl lg:text-5xl text-pretty tracking-tight font-bold text-highlighted text-center">Subscribe to the newsletter</h2>
        <div class="text-base sm:text-lg text-muted text-center text-balance mt-6">Join a trillion other readers getting the best info on AI &amp; technology and stay ahead of the curve.</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div class="flex justify-center">
        <!-- For white background --><button type="button" class="disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary my-4 inline-flex items-center gap-2 rounded-md border border-neutral-800 bg-(--ui-background) px-8 py-3 text-lg font-semibold transition-colors hover:bg-neutral-100 focus:outline-hidden focus-visible:ring-2 focus-visible:ring-(--ui-primary) disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 dark:bg-(--ui-background) dark:text-white dark:border-white dark:hover:bg-neutral-700 text-neutral-800">
          <!--v-if--><span class="truncate">Subscribe</span>
          <!--v-if-->
        </button>
        <!--v-if-->
        <!--teleport start-->
        <!--teleport end-->
      </div>
    </div>
  </section>
</div>"
`;
